--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,11 +28,6 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v4.0.0
-      with:
-        gradle-wrapper-directory: demo
-
     - name: Make gradlew executable
       run: chmod +x gradlew
       working-directory: demo
@@ -54,6 +49,10 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+
+    - name: Make gradlew executable
+      run: chmod +x gradlew
+      working-directory: demo
 
     - name: Generate and submit dependency graph
       uses: gradle/actions/dependency-submission@v4.0.0
